-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.482 2009-04-17 23:42:52 guru Exp $
-----------------------------------------------------------------------------------------

2009-04-17	pwessel
	* gmt_*.c:		The gap check -g is now done inside the i/o library

2009-04-16	pwessel
	* *.txt:		We now discuss -m rather than -M (but are backwards compatible)
	* job*:			All examples now use -m
	* *.tex, *.man:		All documentation now use -m

2009-04-16	remko
	* psclip.c, pscoast.c:	Produce at least "S V" when clippath is empty.
	* gmt_plot.c (GMT_xyz_axis3D):	Bug fix: Call GMT_get_coordinate_label() with
				&GMT_plot_calclock instead of NULL. Crashed when using time labels
				in 3D plot.

2009-04-15	remko
	* gmt_init.c:		Add handling of -M|m by GMT_parse_common_options.
	* *.c:			Removed call to GMT_multisegment. -M|m now handled as common option.
				-m is allowed silently. Not mentioned in manpages.

2009-04-14	pwessel
	* mgd77/mgd77list.c:	Added -Fytime which gives decimal absolute year for time output.
	* *.c:			Promoted new gap-detection option (-F) to a global -g option.

2009-04-14	remko
	* gmtdefaults_??.in, gmt_globals.h:	Increased PS_MITER_LIMIT to 35 degrees to get
				rid of some extremely long miters.
	* gmt_plot.c (GMT_draw_map_rose):	Force "0 setlinejoin 10 setmiterlimit".
	* psxy[z].c:		Bug fix in -F option: should only check from 2nd record onwards
				(n > 0), otherwise crash when using xx[n-1].

2009-04-13	remko
	* gmt_map.c (GMT_map_init_{albers,econic}):	Fixed inability to determine projection
				pole when central_meridian and western boundary are the same.

2009-04-11	remko
	* gmt.h, gmtmath.c, grdmath.c:	Added MOD function (remainder after floored division,
				Knuth style). This is in constrast to FMOD which gives the
				remainder after (horror) truncated division.
	* gmtmath.c:		For check if argument is file: remove suffix ?fields first.

2009-04-10	remko